test_files/s_cproc/include/test_010/e.output
/home/jason/github/stupid_lib/test_files/s_cproc/include/test_010/i.input:1:11: error: x\n\\y: No such file or directory
 #include "x\n\\y"
           ^
